landing_page: Avoid gradient overflowing under content.
Gradient under content makes links which are of similar color
hard to see.

--- a/static/styles/portico/landing_page.css
+++ b/static/styles/portico/landing_page.css
@@ -2636,6 +2636,10 @@ nav {
     left: 0;
     width: 100%;
     height: 1100px;
+
+    @media (width < 768px) {
+        height: 700px;
+    }
 }
 
 .gradients .gradient.dark-blue {
